# chatbot_langchain

./: .gitignore  README.md  main.py  pyproject.toml
langchain_intro/: chatbot.py
scripts/: use_chatbot_model.py
