[project]
name = "chatbot-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.1.0",
    "langchain-community==0.0.12",
    "langchain-openai==0.0.2",
    "langchainhub==0.1.14",
    "openai==1.7.2",
    "python-dotenv>=1.2.2",
    "httpx<0.28",
]
